# Cell2Image

./: README.md  flake.nix  pyproject.toml
cell2image/: image.py  types.py
src/cell2image/: image.py  shape.py  types.py  video_renderer.py
src/cell2image/t1_detection/: __init__.py  adjacency.py  t1_detection.py
test/: test_t1_detection.py
