[tool.poetry]
name = "cell2image"
version = "0.1.0"
description = ""
authors = ["Leon Hillmann <l.hillmann@tue.nl>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "cell2image" }
]

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.60.0"
matplotlib = "^3.9.2"
click = "^8.1.7"
vtk = "^9.3.1"
pillow = "^10.4.0"
ffmpeg-python = "^0.2.0"
# ffmpy = "^0.4.0"
tqdm = "^4.66.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
