[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cell2image"
version = "0.3.1"
description = "Toolbox for converting cell data to images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click"
    "ffmpy",
    "matplotlib",
    "numba",
    "numpy",
    "pillow",
    "tqdm",
    "vtk",
]

[project.scripts]
c2i-video = "cell2image.video_renderer:main"
